# ccns

./: .gitignore  AGENTS.md  README.md
docs/: handoff.md  objection-ai.md
phish-blocker/: .env.example  README.md  pyproject.toml  requirements.txt
phish-blocker/data/: SOURCES.md  blocklist.json  contacts.json  scam_tactics.jsonl
phish-blocker/phish_blocker/: __init__.py  agent.py  blocklist.py  bus.py  contacts.py  corpus.py  dashboard.py  hangup.py  moss_tactics.py  notify.py  scam_handling.py  ssl_certs.py  transfer.py
phish-blocker/scripts/: bench_retrieval.py  build_moss_index.py  demo_dashboard.py  demo_scripts.md  verify_aws.py
phish-blocker/static/: index.html
