[project]
name = "phish-blocker"
version = "0.1.0"
description = "AI call screener — LiveKit + OpenAI Realtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai,silero]~=1.0",
    "aiohttp",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["phish_blocker*"]
