[project]
name = "phish-blocker"
version = "0.1.0"
description = "AI call screener — LiveKit + Amazon Nova Sonic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[aws,silero]~=1.5",
    "livekit-plugins-aws[realtime]~=1.5",
    "aiohttp",
    "python-dotenv",
    "moss",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["phish_blocker*"]
